Add realtime v2 websocket channels subscriptions and presence
